# agilis-utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.org  pyproject.toml  todo.org
agilis_utils/cli/: main.py
