[tool.poetry]
name = "agilis-utils"
version = "0.1.0"
description = "Utilities for Agilis"
authors = ["Jonas Rodrigues <jonas.rodrigues@unisoma.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apsw = "^3.43.0.0"
attrs = "^23.1.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
