[tool.poetry]
name = "agilis-utils"
version = "0.1.0"
description = "Utilities for Agilis"
authors = ["Jonas Rodrigues <jonas.rodrigues@unisoma.com>"]
license = "MIT"
readme = "README.org"
packages = [{ include = "agilis_utils" }]
homepage = "https://unisoma.github.io/agilis-utils/"
repository = "https://github.com/UniSoma/agilis-utils"
documentation = "https://unisoma.github.io/agilis-utils/docs"
keywords = ["utilities", "agilis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Database",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
apsw = "^3.43.0.0"
attrs = "^23.1.0"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pyright = "^1.1.326"
isort = "^5.12.0"
black = "^23.9.1"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
agilis-utils = "agilis_utils.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [".git"]
profile = "black"

[flake8]
max-line-length = 120
extend-ignore = "E203"


[tool.pyright]
include = ["agilis_utils"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = true
useLibraryCodeForTypes = true
pythonVersion = "3.10"
pythonPlatform = "Linux"
